# quick-disk-check

./: .gitignore  README.md  pyproject.toml  quick_disk_check.py  setup.py
.github/workflows/: ci.yml
src/quick_disk_check/: __init__.py  app.py  cli.py  evaluator.py  gui.py  models.py  reporting.py  smartctl_io.py
tests/: test_evaluator.py  test_reporting.py
