[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-disk-check"
version = "1.0.0"
description = "Fast SMART-based disk screening tool with GUI and CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ergo" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
quick-disk-check = "quick_disk_check.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
